- Created a default admin iuser - Reduced the number of roles to 2, admin and author - Added Author routes to the api docs and the routes file
